--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@iconify/vue": "^5.0.0",
+    "@pinia/nuxt": "^0.11.2",
+    "lodash": "^4.17.21",
     "nuxt": "^4.1.1",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-virtual-scroller": "^1.1.2",
+    "yup": "^1.7.0",
+    "zod": "^4.1.5"
+  },
+  "devDependencies": {
+    "@tsconfig/node22": "^22.0.2",
+    "@types/node": "^24.3.1",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/tsconfig": "^0.8.1",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.4",
+    "vite-plugin-vue-devtools": "^8.0.1"
   }
 }
