--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.3.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
     "vite": "^7.1.4",
     "vite-plugin-vue-devtools": "^8.0.1"
