--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@iconify/vue": "^5.0.0",
     "@pinia/nuxt": "^0.11.2",
     "axios": "^1.11.0",
